--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ description: >-
   An open source developer publication aimed at sharing well explained
   tutorials on various topics for the developer community.
 baseurl: ""
-url: "https://genicsblog.com"
+url: "/"
 permalink: /:title
 twitter_username: "genicsblog"
 github_username: "genicsblog"
-github_repo: "genicsblog/genicsblog.com"
+github_repo: "Cermatedu/Blogs"
 google_analytics: "G-KQJM9Z9N1Z"
 adsense-data-ad-client: "ca-pub-8114751086331659"
 adsense-data-display-ad-slot: "8698895132"
